share/cascade/test/regression/type_check/fail/generate_4.v
genvar i;
genvar j;

for(i=0;i<10;j=j+1) begin
  initial $display(i);
end
